istio ingress migration bash hax

--- a/istio-migration/istio_ingress_template.yaml
+++ b/istio-migration/istio_ingress_template.yaml
@@ -5,7 +5,7 @@ metadata:
     kubernetes.io/ingress.class: istio
   labels:
     app: @APP_NAME@
-    istio-enabled: true
+    istio-enabled: "true"
   name: @APP_NAME@
   namespace: @NAMESPACE@
 spec:
