Add doc about using private docker repo and some cleanup.

--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -157,6 +157,7 @@
       - /run/docker
       - /run/flannel
       - /run/kubernetes
+      - /root/.docker
 
   - name: Remove docker interface
     command: ip link delete docker0
