Enabled TLS for traefik.
- Generate traefik certificate
- Made traefik listen to 443
- Bumped traefik version

--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -31,6 +31,11 @@
   args:
     creates: target/pki/kube-apiserver-server.pem
 
+- name: Creating traefik certificate
+  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server files/traefik-csr.json | bin/cfssljson -bare target/pki/traefik
+  args:
+    creates: target/pki/traefik.pem
+
 - name: Creating service account keypair
   shell: /usr/bin/openssl genrsa -out sa.key 2048 && /usr/bin/openssl rsa -pubout -in sa.key -out sa.pub
   args:
