--- a/roles/proxy/tasks/main.yml
+++ b/roles/proxy/tasks/main.yml
@@ -1,9 +1,9 @@
 - name: Ensure directories exist
-  file: state=directory path=/etc/pki/ca-trust/source/anchors
+  file: state=directory path=/etc/ssl/certs
 
 - name: Install proxy cert
-  copy: src=files/webproxy.crt dest=/etc/pki/ca-trust/source/anchors/webproxy.crt
+  copy: src=files/webproxy.crt dest=/etc/ssl/certs/webproxy.crt
 
 - name: update_cert_index
-  command: /usr/bin/update-ca-trust
+  command: /sbin/update-ca-certificates
   changed_when: false
