Binary paths updated and local python interpreter added

--- a/istio-test-playbook.yaml
+++ b/istio-test-playbook.yaml
@@ -7,7 +7,7 @@
     K8S_HOST_COUNT: "{{ (groups['workers'] | length) + (groups['masters'] | length) }}"
   tasks:
     - name: Ensure istio with addons are deployed and available
-      shell: "/usr/bin/kubectl -n istio-system get deploy {{ item }} -o json | grep availableReplicas | grep -v 0 | wc -l"
+      shell: "/opt/bin/kubectl -n istio-system get deploy {{ item }} -o json | grep availableReplicas | grep -v 0 | wc -l"
       with_items:
         - istio-ca
         - istio-mixer
@@ -23,10 +23,10 @@
 
 # temporarily disabled until naisd adds annotations
 #    - name: Delete existing nais-testapp pod
-#      command: "/usr/bin/kubectl delete pod -l 'app=nais-testapp'"
+#      command: "/opt/bin/kubectl delete pod -l 'app=nais-testapp'"
 #
 #    - name: Ensure istio-sidecar-injector webhook has injected istio-config 
-#      shell: "/usr/bin/kubectl get pod -l 'app=nais-testapp' | grep Running | grep '3/3'"
+#      shell: "/opt/bin/kubectl get pod -l 'app=nais-testapp' | grep Running | grep '3/3'"
 #      register: matches_spec
 #      retries: 10
 #      delay: 10
