--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -5,26 +5,16 @@
   become: yes
   tasks:
   - name: Remove certificate
-    file: path=/etc/pki/ca-trust/source/anchors/webproxy.crt state=absent
+    file: path=/etc/ssl/certs/webproxy.pem state=absent
 
   - name: update_cert_index
-    command: /usr/bin/update-ca-trust
+    command: /sbin/update-ca-certificates
     changed_when: false
 
 - hosts: masters:workers
   user: "{{ remote_user }}"
   become: yes
   tasks:
-    - name: Remove kubernetes repository
-      yum_repository:
-        name: Kubernetes
-        state: absent
-
-    - name: Remove docker repository
-      yum_repository:
-        name: Docker
-        state: absent
-
     - name: Stop services
       command: timeout 15 /bin/systemctl stop {{ item }}
       with_items:
@@ -41,26 +31,12 @@
       ignore_errors: yes
       changed_when: false
 
-    - name: Remove required packages
-      yum: name={{ item }} state=absent
-      with_items:
-        - "docker-ce"
-
     - name: Remove files
       file: path={{ item }} state=absent
       with_items:
         - /etc/systemd/system/docker.service.d
         - /etc/systemd/system/kubelet.service
         - /etc/kubernetes
-        - /etc/docker
-
-    - name: Unmount docker resources
-      command: /bin/umount {{ item }}
-      with_items:
-        - /run/docker/netns/*
-        - /var/lib/docker/overlay
-      ignore_errors: yes
-      changed_when: false
 
     - name: Get mounted kubelet resources
       shell: "mount | grep /var/lib/kubelet/pods | cut -d ' ' -f 3"
@@ -83,8 +59,8 @@
       file: path={{ item }} state=absent
       with_items:
         - /root/.helm/repository/repositories.yaml
-        - /usr/bin/helm-{{helm_version}}
-        - /usr/bin/helm
+        - /opt/bin/helm-{{helm_version}}
+        - /opt/bin/helm
         - /etc/sensu/conf.d/nais_master_metrics.json
 
 - hosts: etcd
@@ -97,10 +73,10 @@
     - name: Remove files
       file: path={{ item }} state=absent
       with_items:
-        - /usr/bin/etcd-{{etcd_version}}
-        - /usr/bin/etcd
-        - /usr/bin/etcdctl-{{etcd_version}}
-        - /usr/bin/etcdctl
+        - /opt/bin/etcd-{{etcd_version}}
+        - /opt/bin/etcd
+        - /opt/bin/etcdctl-{{etcd_version}}
+        - /opt/bin/etcdctl
         - /var/lib/etcd
         - /etc/systemd/system/etcd.service
 
@@ -136,33 +112,26 @@
     file: path={{ item }} state=absent
     with_items:
       - /etc/systemd/system/kubelet.service
-      - /usr/bin/kube-proxy*
-      - /usr/bin/kubelet*
-      - /usr/bin/kubectl*
+      - /opt/bin/kube-proxy*
+      - /opt/bin/kubelet*
+      - /opt/bin/kubectl*
       - /etc/systemd/system/kube-proxy.service
-      - /usr/libexec/mk-docker-opts.sh
-      - /usr/bin/flanneld
+      - /opt/mk-docker-opts.sh
+      - /opt/bin/flanneld
       - /etc/systemd/system/flannel.service
       - /etc/systemd/system/docker.service
-      - /usr/bin/flanneld-{{flannel_version}}
+      - /opt/bin/flanneld-{{flannel_version}}
       - /run/docker_opts.env
       - /run/flannel/subnet.env
       - /var/lib/docker
       - /var/lib/dockershim
       - /var/lib/kubelet
       - /var/lib/kubernetes
-      - /var/run/docker
       - /var/run/flannel
       - /var/run/kubernetes
-      - /run/docker
       - /run/flannel
       - /run/kubernetes
       - /root/.docker
-
-  - name: Remove docker interface
-    command: ip link delete docker0
-    ignore_errors: yes
-    changed_when: false
 
   - name: Remove flannel interface
     command: ip link delete flannel.1
