--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -1,16 +1,16 @@
-- hosts: all
-  user: "{{ remote_user }}"
-  become: yes
-  roles:
-  -  { role: proxy, when: nais_http_proxy is defined }
-
 - hosts: coreos
   gather_facts: False
   pre_tasks:
   - name: Copy python interpreter to server
     local_action: command scp files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/containerlinux/
   roles: 
-    - defunctzombie.coreos-bootstrap
+    - coreos_bootstrap
+
+- hosts: all
+  user: "{{ remote_user }}"
+  become: yes
+  roles:
+  -  { role: proxy, when: nais_http_proxy is defined }
 
 - hosts: masters:workers
   user: "{{ remote_user }}"
@@ -41,7 +41,7 @@
   become: yes
   tasks:
   - name: Check if flannel config exists (OK if this fails)
-    command: /opt/bin/etcdctl ls /nais/network/config
+    command: "{{ install_dir }}/bin/etcdctl ls /nais/network/config"
     environment:
       - ETCDCTL_API: 2
     register: flannelconfig
@@ -49,7 +49,7 @@
     changed_when: false
 
   - name: Set flannel configuration in etcd
-    shell: '/opt/bin/etcdctl set /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
+    shell: '"{{ install_dir }}"/bin/etcdctl set /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
     environment:
       - ETCDCTL_API: 2
     when: flannelconfig.rc != 0
@@ -82,15 +82,15 @@
     environment: "{{ proxy_env }}"
     shell: curl -L --insecure https://github.com/coreos/flannel/releases/download/v{{flannel_version}}/flannel-v{{flannel_version}}-linux-amd64.tar.gz | \
            tar xzf - -C /tmp flanneld mk-docker-opts.sh && \
-           mv /tmp/flanneld /opt/bin/flanneld-{{flannel_version}} && \
-           mv /tmp/mk-docker-opts.sh /opt
+           mv /tmp/flanneld {{ install_dir }}/bin/flanneld-{{flannel_version}} && \
+           mv /tmp/mk-docker-opts.sh /{{ install_dir }}
     args:
-      creates: /opt/bin/flanneld-{{flannel_version}}
+      creates: "{{ install_dir }}/bin/flanneld-{{flannel_version}}"
     tags:
       - skip_ansible_lint
 
   - name: Symlink flannel
-    file: src=/opt/bin/flanneld-{{flannel_version}} dest=/opt/bin/flanneld state=link
+    file: src={{ install_dir }}/bin/flanneld-{{flannel_version}} dest={{ install_dir }}/bin/flanneld state=link
 
   - name: Copy flannel service file
     template: src=templates/flannel.service.j2 dest=/etc/systemd/system/flannel.service
@@ -109,7 +109,7 @@
     file: path=/var/lib/docker/docker_opts.env state=absent
 
   - name: Make flannel configuration for docker
-    command: /opt/mk-docker-opts.sh -k DOCKER_OPTS -f /run/flannel/subnet.env -d /var/lib/docker/docker_opts.env
+    command: "{{ install_dir }}/mk-docker-opts.sh -k DOCKER_OPTS -f /run/flannel/subnet.env -d /var/lib/docker/docker_opts.env"
     changed_when: false
 
   - name: Copy docker service file
@@ -142,17 +142,17 @@
     environment: "{{ proxy_env }}"
     shell: curl -L --insecure https://dl.k8s.io/v{{ k8s_version }}/kubernetes-node-linux-amd64.tar.gz | \
            tar xzf - -C /tmp kubernetes/node/bin/kubectl kubernetes/node/bin/kube-proxy kubernetes/node/bin/kubelet && \
-           mv /tmp/kubernetes/node/bin/kube-proxy /opt/bin/kube-proxy-{{ k8s_version }} && \
-           mv /tmp/kubernetes/node/bin/kubectl /opt/bin/kubectl-{{ k8s_version }} && \
-           mv /tmp/kubernetes/node/bin/kubelet /opt/bin/kubelet-{{ k8s_version }}
+           mv /tmp/kubernetes/node/bin/kube-proxy {{ install_dir }}/bin/kube-proxy-{{ k8s_version }} && \
+           mv /tmp/kubernetes/node/bin/kubectl {{ install_dir }}/bin/kubectl-{{ k8s_version }} && \
+           mv /tmp/kubernetes/node/bin/kubelet {{ install_dir }}/bin/kubelet-{{ k8s_version }}
     args:
-      creates: /opt/bin/kubelet-{{k8s_version}}
+      creates: "{{ install_dir }}/bin/kubelet-{{k8s_version}}"
     tags:
       - dev
       - skip_ansible_lint
 
   - name: Symlink kubernetes node binaries
-    file: src=/opt/bin/{{ item }}-{{ k8s_version }} dest=/opt/bin/{{ item }} state=link force=yes
+    file: src={{ install_dir }}/bin/{{ item }}-{{ k8s_version }} dest={{ install_dir }}/bin/{{ item }} state=link force=yes
     with_items:
       - kubectl
       - kube-proxy
@@ -162,7 +162,7 @@
       - restart_kubeproxy
 
   - name: Make kubernetes node binaries executable
-    file: path=/opt/bin/{{ item }}-{{ k8s_version }} mode=0755
+    file: path={{ install_dir }}/bin/{{ item }}-{{ k8s_version }} mode=0755
     with_items:
       - kubectl
       - kube-proxy
@@ -333,23 +333,23 @@
     changed_when: false
 
   - name: Generate cluster-admin kubeconfig
-    shell: /opt/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups['masters'][0] }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
-           /opt/bin/kubectl config set-credentials {{ cluster_name }}-cluster-admin --client-certificate=/etc/kubernetes/pki/admin.pem --client-key=/etc/kubernetes/pki/admin-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
-           /opt/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-cluster-admin --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
-           /opt/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf
+    shell: "{{ install_dir }}/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups['masters'][0] }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           {{ install_dir }}/bin/kubectl config set-credentials {{ cluster_name }}-cluster-admin --client-certificate=/etc/kubernetes/pki/admin.pem --client-key=/etc/kubernetes/pki/admin-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           {{ install_dir }}/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-cluster-admin --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           {{ install_dir }}/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf"
     changed_when: false
 
   - name: Wait for API server to become available
-    wait_for: port=6443 host={{ groups['masters'][0] }} delay=15 timeout=120
+    wait_for: port=6443 host={{ groups['masters'][0] }} delay=15 timeout=240
     changed_when: false
 
   - name: Setup node taints
-    command: /opt/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf  --overwrite=true taint nodes {{ inventory_hostname }} {{ item }}
+    command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf  --overwrite=true taint nodes {{ inventory_hostname }} {{ item }}"
     with_items: "{{ node_taints | default([]) }}"
     changed_when: false
 
   - name: Setup node labels
-    command: /opt/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf --overwrite=true label nodes {{ inventory_hostname }} {{ item }}
+    command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf --overwrite=true label nodes {{ inventory_hostname }} {{ item }}"
     with_items: "{{ node_labels | default([]) }}"
     changed_when: false
 
@@ -387,19 +387,19 @@
     changed_when: false
 
   - name: Create clusterrole and clusterrolebindings
-    command: /opt/bin/kubectl apply -f /etc/kubernetes/roles/{{ item }}
+    command: "{{ install_dir }}/bin/kubectl apply -f /etc/kubernetes/roles/{{ item }}"
     with_items:
     - clusterroles.yaml
     - clusterrolebindings.yaml
     changed_when: false
 
   - name: Create traefik tls secret
-    command: /opt/bin/kubectl -n kube-system create secret tls traefik-cert --key=/etc/kubernetes/pki/traefik-key.pem --cert=/etc/kubernetes/pki/traefik.pem
+    command: "{{ install_dir }}/bin/kubectl -n kube-system create secret tls traefik-cert --key=/etc/kubernetes/pki/traefik-key.pem --cert=/etc/kubernetes/pki/traefik.pem"
     ignore_errors: yes
     changed_when: false
 
   - name: Create addons
-    command: /opt/bin/kubectl apply -f /etc/kubernetes/addons/{{ item }}
+    command: "{{ install_dir }}/bin/kubectl apply -f /etc/kubernetes/addons/{{ item }}"
     with_items:
       - kubernetes-dashboard.yaml
       - core-dns.yaml
@@ -413,23 +413,23 @@
     environment: "{{ proxy_env }}"
     shell: curl -L --insecure https://storage.googleapis.com/kubernetes-helm/helm-v{{ helm_version }}-linux-amd64.tar.gz | \
            tar xzf - -C /tmp linux-amd64/helm && \
-           mv /tmp/linux-amd64/helm /opt/bin/helm-{{ helm_version }}
+           mv /tmp/linux-amd64/helm {{ install_dir }}/bin/helm-{{ helm_version }}
     args:
-      creates: /opt/bin/helm-{{ helm_version }}
+      creates: "{{ install_dir }}/bin/helm-{{ helm_version }}"
     tags:
       - skip_ansible_lint
 
   - name: Symlink helm
-    file: src=/opt/bin/helm-{{ helm_version }} dest=/opt/bin/helm state=link
+    file: src={{ install_dir }}/bin/helm-{{ helm_version }} dest={{ install_dir }}/bin/helm state=link
 
   - name: Setup helm service account
-    shell: /opt/bin/kubectl create serviceaccount --namespace kube-system tiller &&
-           /opt/bin/kubectl create clusterrolebinding tiller-cluster-rule --clusterrole=cluster-admin --serviceaccount=kube-system:tiller
+    shell: "{{ install_dir }}/bin/kubectl create serviceaccount --namespace kube-system tiller &&
+           {{ install_dir }}/bin/kubectl create clusterrolebinding tiller-cluster-rule --clusterrole=cluster-admin --serviceaccount=kube-system:tiller"
     ignore_errors: yes
     changed_when: false
 
   - name: Initialize helm
-    command: /opt/bin/helm init --service-account=tiller --history-max 5 --upgrade
+    command: "{{ install_dir }}/bin/helm init --service-account=tiller --history-max 5 --upgrade"
     environment: "{{ proxy_env }}"
     changed_when: false
 
