--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -59,8 +59,8 @@
       file: path={{ item }} state=absent
       with_items:
         - /root/.helm/repository/repositories.yaml
-        - /opt/bin/helm-{{helm_version}}
-        - /opt/bin/helm
+        - "{{ install_dir }}/bin/helm-{{helm_version}}"
+        - "{{ install_dir }}/bin/helm"
         - /etc/sensu/conf.d/nais_master_metrics.json
 
 - hosts: etcd
@@ -73,10 +73,10 @@
     - name: Remove files
       file: path={{ item }} state=absent
       with_items:
-        - /opt/bin/etcd-{{etcd_version}}
-        - /opt/bin/etcd
-        - /opt/bin/etcdctl-{{etcd_version}}
-        - /opt/bin/etcdctl
+        - "{{ install_dir }}/bin/etcd-{{etcd_version}}"
+        - "{{ install_dir }}/bin/etcd"
+        - "{{ install_dir }}/bin/etcdctl-{{etcd_version}}"
+        - "{{ install_dir }}/bin/etcdctl"
         - /var/lib/etcd
         - /etc/systemd/system/etcd.service
 
@@ -112,15 +112,15 @@
     file: path={{ item }} state=absent
     with_items:
       - /etc/systemd/system/kubelet.service
-      - /opt/bin/kube-proxy*
-      - /opt/bin/kubelet*
-      - /opt/bin/kubectl*
+      - "{{ install_dir }}/bin/kube-proxy*"
+      - "{{ install_dir }}/bin/kubelet*"
+      - "{{ install_dir }}/bin/kubectl*"
       - /etc/systemd/system/kube-proxy.service
-      - /opt/mk-docker-opts.sh
-      - /opt/bin/flanneld
+      - "{{ install_dir }}/mk-docker-opts.sh"
+      - "{{ install_dir }}/bin/flanneld"
       - /etc/systemd/system/flannel.service
       - /etc/systemd/system/docker.service
-      - /opt/bin/flanneld-{{flannel_version}}
+      - "{{ install_dir }}/bin/flanneld-{{flannel_version}}"
       - /run/docker_opts.env
       - /run/flannel/subnet.env
       - /var/lib/docker
@@ -140,3 +140,13 @@
 
   - name: Remove nais sensu check directory
     file: path=/etc/sensu/plugins/metrics/nais state=absent
+
+- hosts: coreos
+  user: "{{ remote_user }}"
+  become: yes
+  tasks:
+  - name: Remove python bootstrap file
+    file: path={{ ansible_pypy_bootstrap_file }} state=absent
+
+  - name: Remove python interpreter
+    raw: rm -rf {{ ansible_python_interpreter }} {{ ansible_pypy_home }} 
