--- a/roles/k8s_common/tasks/main.yml
+++ b/roles/k8s_common/tasks/main.yml
@@ -6,6 +6,62 @@
     - /etc/systemd/system/docker.service.d
     - /etc/docker
     - "{{ install_dir }}/bin"
+    - "{{ install_dir }}/libexec"
+
+# Check if puppet-agent exist
+- name: Check if puppet is installed
+  command: rpm -q puppet
+  ignore_errors: yes
+  register: puppet_agent_rpm_check
+  tags:
+    - skip_ansible_lint
+
+- name: Add kubernetes repository
+  yum_repository:
+    name: Kubernetes
+    description: Kubernetes
+    file: kubernetes
+    baseurl: http://yum.kubernetes.io/repos/kubernetes-el7-x86_64
+    enabled: true
+    gpgcakey: https://packages.cloud.google.com/yum/doc/yum-key.gpg
+    gpgkey: https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+    gpgcheck: true
+    state: present
+  when: puppet_agent_rpm_check.rc == 0
+
+- name: Add docker repository
+  yum_repository:
+    name: Docker
+    description: Docker
+    file: docker
+    baseurl: https://download.docker.com/linux/centos/7/x86_64/stable
+    enabled: true
+    gpgkey: https://download.docker.com/linux/centos/gpg
+    gpgcheck: true
+    state: present
+  when: puppet_agent_rpm_check.rc == 0
+
+# install docker-selinux package separately to avoid obsoletion errors from newer docker releases
+- name: Remove container-selinux
+  yum:
+    name: container-selinux
+    state: absent
+  when: puppet_agent_rpm_check.rc == 0
+
+- name: Install docker selinux package # need to avoid installing obsolete packages
+  environment: "{{ proxy_env }}"
+  shell: "yum -y --setopt=obsoletes=0 install docker-ce-selinux-{{ docker_version }}"
+  tags:
+    - skip_ansible_lint
+  when: puppet_agent_rpm_check.rc == 0
+
+- name: Install required packages
+  environment: "{{ proxy_env }}"
+  yum: name={{ item }} state=present
+  with_items:
+    - "docker-ce-{{ docker_version }}"
+    - "socat"
+  when: puppet_agent_rpm_check.rc == 0
 
 - name: Docker proxy settings
   template: src=templates/docker-proxy.conf.j2 dest=/etc/systemd/system/docker.service.d/proxy.conf
@@ -18,3 +74,13 @@
   register: sensu_rpm_check
   tags:
     - skip_ansible_lint
+
+- name: Disable puppet agent
+  command: /bin/puppet agent --disable
+  ignore_errors: yes
+  when: puppet_agent_rpm_check.rc == 0
+
+- name: Disable puppet agent (preprod)
+  command: /opt/puppet/bin/puppet agent --disable
+  ignore_errors: yes
+  when: puppet_agent_rpm_check.rc == 0
