--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -297,6 +297,9 @@
       - restart_kubelet
       - restart_kubeproxy
 
+  - name: Copy Issuing Internal certificate
+    copy: src=files/NAVIssuingCAIntern.crt dest={{ cert_dir }}/NAV_Issuing_Intern_CA.crt force=no
+
   - name: Ensure certs.d directory exists worker nodes
     file: state=directory path=/etc/docker/certs.d/docker.adeo.no:5000/
 
