only restart etcd on changes

--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -8,6 +8,8 @@
     creates: /usr/bin/etcd-{{ etcd_version }}
   tags:
     - skip_ansible_lint
+  notify:
+    - restart_etcd
 
 - name: Symlink etcd
   file: src=/usr/bin/etcd-{{etcd_version}} dest=/usr/bin/etcd state=link
@@ -20,10 +22,12 @@
 
 - name: Creating etcd.service for systemd
   template: src=templates/etcd.service.j2 dest=/etc/systemd/system/etcd.service
+  notify:
+    - restart_etcd
 
 - name: Enable etcd
   systemd:
     daemon_reload=yes
     name=etcd
-    state=restarted
+    state=started
     enabled=yes
